--- a/src/assets/css/main.styl
+++ b/src/assets/css/main.styl
@@ -2,7 +2,7 @@
 // Diablo-Like Font · DiabloHeavy Font
 // ---------------------
 
-@font-face
+/* @font-face
   font-family "DiabloHeavy"
   src url("../fonts/diabloh.eot")
   src url("../fonts/diabloh.eot?#iefix") format("embedded-opentype"),
@@ -16,7 +16,7 @@
 
 .font-diablo
   font-family "DiabloHeavy", sans-serif
-
+ */
 // ---------------------
 // Sprite image · Heroes faces
 // ---------------------
@@ -28,7 +28,7 @@
 .hero-monk,
 .hero-necromancer,
 .hero-crusader
-  background-image: url('../img/heroes-faces.png')
+  background-image: url('https://cloud.modyocdn.com/uploads/ef07aebe-be2f-4f43-91d9-dff9c4df5e45/original/heroes-faces.png')
   background-size 203%
   width 136px
   height 106px
@@ -135,7 +135,7 @@
 // ---------------------
 
 .act
-  background-image: url('../img/progress.png')
+  background-image: url('https://cloud.modyocdn.com/uploads/06b6fcc5-521f-49b0-b94c-c0eaf454975f/original/progress.png')
   background-size 500%
 
   &.act1
@@ -179,7 +179,7 @@
 // ---------------------
 .resource
   .resource-icon
-    background-image url('../img/resources.png')
+    background-image url('https://cloud.modyocdn.com/uploads/3feb4c6a-7634-4d41-aa16-20c6c3bc5740/original/resources.png')
     width 50px
     height 50px
 
@@ -213,7 +213,7 @@
       display block
       width 22px
       height 22px
-      background url("../img/skill-overlays.png") 0 0
+      background url("https://cloud.modyocdn.com/uploads/d7cd6883-73c4-4ca7-bf92-7ab06ffab4a3/original/skill-overlays.png") 0 0
       position absolute
       top -5px
       left 5px
