ICONOS, EMOJIS TERMINA VISTA PERFIL

--- a/src/assets/css/main.styl
+++ b/src/assets/css/main.styl
@@ -20,6 +20,8 @@
 // ---------------------
 // Sprite image · Heroes faces
 // ---------------------
+body
+  color #ffffff
 
 .hero-barbarian,
 .hero-witch-doctor,
