--- a/src/assets/css/main.styl
+++ b/src/assets/css/main.styl
@@ -2,7 +2,7 @@
 // Diablo-Like Font · DiabloHeavy Font
 // ---------------------
 
-/* @font-face
+@font-face
   font-family "DiabloHeavy"
   src url("../fonts/diabloh.eot")
   src url("../fonts/diabloh.eot?#iefix") format("embedded-opentype"),
@@ -16,12 +16,8 @@
 
 .font-diablo
   font-family "DiabloHeavy", sans-serif
- */
 // ---------------------
 // Sprite image · Heroes faces
-// ---------------------
-body
-  color #ffffff
 
 .hero-barbarian,
 .hero-witch-doctor,
